# Mesh-Denoising

./: CMakeLists.txt  LICENSE  Non-Iterative, Feature-Preserving Mesh Smoothing.ipynb  README.md
include/: denoise_obj.hpp
log/: denoise_log.txt
src/: denoise_obj.cpp  main.cpp
